test/fails/bad_parsing/bad_declare2.lgl
declare int int();

void main() {
    return;
}